force-app/main/default/objects/NI_Project_Backlog__c/fields/Urgency_Score__c.field-meta.xml
<CustomField>
    <fullName>Urgency_Score__c</fullName>
    <formula>15*
(CASE(Urgency__c, 
&quot;Normal&quot;, 1,
&quot;Important&quot;, 3,
&quot;Expedite&quot;, 5,
0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Score: Urgency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>