force-app/main/default/objects/NI_Project_Backlog__c/fields/Validation_Hours__c.field-meta.xml
<CustomField>
    <fullName>Validation_Hours__c</fullName>
    <formula>Actual_Hours_Validation__c +  Child_Project_Task_Hours_Validation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Validation Hours For Project</inlineHelpText>
    <label>Validation Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>