force-app/main/default/objects/NI_Project_Backlog__c/fields/Visualforce_Pages_To_Change__c.field-meta.xml
<CustomField>
    <fullName>Visualforce_Pages_To_Change__c</fullName>
    <description>NICC-023424 
The Visualforce Pages that will be changed as part of this Change Request</description>
    <inlineHelpText>The Visualforce Pages that will be changed as part of this Change Request. This field must be updated if the Change Type contains &quot;Change Existing Visualforce Page&quot;</inlineHelpText>
    <label>Visualforce Pages To Change</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Visualforce_Pages</valueSetName>
    </valueSet>
</CustomField>