force-app/main/default/objects/NI_Project_Backlog__c/fields/Workstream_1st_Yr_Cost_Reduction__c.field-meta.xml
<CustomField>
    <fullName>Workstream_1st_Yr_Cost_Reduction__c</fullName>
    <businessOwnerGroup>DEPT_Business_Systems</businessOwnerGroup>
    <description>NICC-047197</description>
    <inlineHelpText>The sum of the &quot;First Year Cost Reduction&quot; for all workstreams related to this project</inlineHelpText>
    <label>Workstream 1st Yr Cost Reduction</label>
    <summarizedField>AH_Project_Backlog_Workstreams__c.First_Year_Cost_Reduction__c</summarizedField>
    <summaryForeignKey>AH_Project_Backlog_Workstreams__c.NI_Project_Backlog__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>