force-app/main/default/objects/NI_Project_Backlog__c/recordTypes/Development_Request.recordType-meta.xml
<RecordType>
    <fullName>Development_Request</fullName>
    <active>true</active>
    <description>Used for submitting requests to Newmarket&apos;s internal Development Team</description>
    <label>Development Request</label>
</RecordType>