force-app/main/default/objects/NI_Project_Backlog__c/recordTypes/Finance_Project.recordType-meta.xml
<RecordType>
    <fullName>Finance_Project</fullName>
    <active>true</active>
    <description>Used for Finance projects</description>
    <label>Finance Project</label>
</RecordType>