force-app/main/default/objects/NI_Project_Backlog__c/recordTypes/IT_Project.recordType-meta.xml
<RecordType>
    <fullName>IT_Project</fullName>
    <active>true</active>
    <description>Used for projects for the IT Department</description>
    <label>IT Project</label>
</RecordType>