force-app/main/default/objects/NI_Project_Backlog__c/recordTypes/Marketing_Project.recordType-meta.xml
<RecordType>
    <fullName>Marketing_Project</fullName>
    <active>true</active>
    <description>Used for projects for the Marketing Department</description>
    <label>Marketing Project</label>
</RecordType>