force-app/main/default/objects/NI_Project_Backlog__c/validationRules/DTS_CompletionDateCompletedProjects.validationRule-meta.xml
<ValidationRule>
    <fullName>DTS_CompletionDateCompletedProjects</fullName>
    <active>true</active>
    <description>A completion date is required when DTS Projects are marked as Complete</description>
    <errorConditionFormula>AND
(RecordType.DeveloperName = &quot;Business_Systems&quot;,
ISPICKVAL(Request_Status__c,&quot;Completed&quot;),
OR(ISBLANK(Project_Completion_Date__c))
)</errorConditionFormula>
    <errorDisplayField>Project_Completion_Date__c</errorDisplayField>
    <errorMessage>A completion date is required when changing the status to Complete</errorMessage>
</ValidationRule>