force-app/main/default/objects/NI_Project_Backlog__c/validationRules/Project_Fields_Not_Editable.validationRule-meta.xml
<ValidationRule>
    <fullName>Project_Fields_Not_Editable</fullName>
    <active>true</active>
    <description>NICC-055369
Certain fields on the Internal Project record type are not editable to most users after the project has been Approved.</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &quot;Commercial_Operation_Projects&quot;,
NOT( ISNEW() ),
Approved__c = TRUE,
OR(
 ISCHANGED( Legal_Compliance__c ) ,
 ISCHANGED( Required_for_Security_Compliance__c ),
 ISCHANGED( First_Year_Revenue_Increase__c ),
 ISCHANGED( Estimated_Annual_Revenue_Increase__c),
 ISCHANGED( Annual_Revenue_Increase_Confidence__c)
),
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
$Permission.Edit_AH_Project_Backlog_Internal_Projects = FALSE
)</errorConditionFormula>
    <errorMessage>Benefits information cannot be changed after the project has been approved. Please speak with the Project Owner, or refer to the Internal Project Prioritization Intake documentation for further information.</errorMessage>
</ValidationRule>