force-app/main/default/objects/NI_Project_Backlog__c/validationRules/Project_Status_Not_Started_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Project_Status_Not_Started_Change</fullName>
    <active>true</active>
    <description>You Cannot change the Project Status from &quot;Not Started&quot; until at least one related task is created.</description>
    <errorConditionFormula>AND(NOT ISPICKVAL(Project_Status__c,&apos;Not Started&apos;),  Total_Project_Tasks__c = 0)</errorConditionFormula>
    <errorMessage>Cannot change the Project Status from &quot;Not Started&quot; until at least one related task is created.</errorMessage>
</ValidationRule>