force-app/main/default/objects/NI_Project_Backlog__c/listViews/ALB_Other_Projects.listView-meta.xml
<ListView>
    <fullName>ALB_Other_Projects</fullName>
    <booleanFilter>(1 AND 2 AND 3 AND 4)</booleanFilter>
    <columns>Notes__c</columns>
    <columns>CBS_Committed__c</columns>
    <columns>CBS_Start_Date__c</columns>
    <columns>Priority__c</columns>
    <columns>Solution_Domain__c</columns>
    <columns>User__c</columns>
    <columns>Corporate_Initiative_Lookup__c</columns>
    <columns>NAME</columns>
    <columns>Request_Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Request_Status__c</field>
        <operation>notEqual</operation>
        <value>Completed,Canceled</value>
    </filters>
    <filters>
        <field>Sponsor__c</field>
        <operation>equals</operation>
        <value>Meghan Norwood</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>NI_Project_Backlog__c.Commercial_Operation_Projects</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>Master</value>
    </filters>
    <label>ALB - CE - Process Improvement Projects</label>
</ListView>