force-app/main/default/objects/NI_Project_Backlog__c/listViews/ALB_Project_Backlog.listView-meta.xml
<ListView>
    <fullName>ALB_Project_Backlog</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Requested_Completion_Date__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Project_Type__c</columns>
    <columns>Sponsor__c</columns>
    <columns>Request_Status__c</columns>
    <columns>Master_Project__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Beneficiaries__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sponsor__c</field>
        <operation>equals</operation>
        <value>Alesha Burnham</value>
    </filters>
    <filters>
        <field>Request_Status__c</field>
        <operation>notEqual</operation>
        <value>Completed,Rejected,Canceled</value>
    </filters>
    <label>ALB Business Systems Projects</label>
</ListView>