force-app/main/default/objects/NI_Project_Backlog__c/listViews/BS_Admin_Escalated_to_Project.listView-meta.xml
<ListView>
    <fullName>BS_Admin_Escalated_to_Project</fullName>
    <booleanFilter>(1 AND 2) AND 3</booleanFilter>
    <columns>NAME</columns>
    <columns>Request_Status__c</columns>
    <columns>Phase__c</columns>
    <columns>Stakeholder__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Ticket_Escalated_to_Project__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Project_Type__c</field>
        <operation>equals</operation>
        <value>SFDC System Admin</value>
    </filters>
    <filters>
        <field>Request_Status__c</field>
        <operation>notEqual</operation>
        <value>Completed,Rejected</value>
    </filters>
    <label>SFDC Sys Admin - Project from MSD Ticket</label>
    <sharedTo>
        <group>Business_Systems_Internal</group>
    </sharedTo>
</ListView>