force-app/main/default/objects/NI_Project_Backlog__c/listViews/Business_Systems_Backlog1.listView-meta.xml
<ListView>
    <fullName>Business_Systems_Backlog1</fullName>
    <columns>NAME</columns>
    <columns>Sponsor__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Requested_Completion_Date__c</columns>
    <columns>Complexity__c</columns>
    <columns>Request_Status__c</columns>
    <columns>Phase__c</columns>
    <columns>Sprint__c</columns>
    <columns>Priority__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>NI_Project_Backlog__c.Business_Systems</value>
    </filters>
    <filters>
        <field>Request_Status__c</field>
        <operation>equals</operation>
        <value>New,Backlog Item,Blocked,Redirected,On Hold</value>
    </filters>
    <label>Business Systems - Backlog</label>
    <language>en_US</language>
    <sharedTo>
        <group>Business_Systems_Internal</group>
        <group>Commercial_Operations</group>
    </sharedTo>
</ListView>