force-app/main/default/objects/NI_Project_Backlog__c/listViews/Business_Systems_Backlog2.listView-meta.xml
<ListView>
    <fullName>Business_Systems_Backlog2</fullName>
    <booleanFilter>(1 OR 2) AND 3 AND 4</booleanFilter>
    <columns>NAME</columns>
    <columns>Sponsor__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Requested_Completion_Date__c</columns>
    <columns>Complexity__c</columns>
    <columns>Request_Status__c</columns>
    <columns>Phase__c</columns>
    <columns>Sprint__c</columns>
    <columns>Priority__c</columns>
    <columns>On_Hold_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>startsWith</operation>
        <value>Mary</value>
    </filters>
    <filters>
        <field>OWNER.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Mary</value>
    </filters>
    <filters>
        <field>Request_Status__c</field>
        <operation>notEqual</operation>
        <value>Completed</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>NI_Project_Backlog__c.Business_Systems</value>
    </filters>
    <label>Business Systems - Mary</label>
    <sharedTo>
        <group>Business_Systems_Internal</group>
        <group>Commercial_Operations</group>
    </sharedTo>
</ListView>