force-app/main/default/objects/NI_Project_Backlog__c/listViews/Business_Systems_Cleanup.listView-meta.xml
<ListView>
    <fullName>Business_Systems_Cleanup</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Request_Status__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Project_Type__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>NI_Project_Backlog__c.Business_Systems</value>
    </filters>
    <filters>
        <field>Request_Status__c</field>
        <operation>notEqual</operation>
        <value>Completed</value>
    </filters>
    <label>Business Systems - Cleanup</label>
    <language>en_US</language>
    <sharedTo>
        <group>Business_Systems_Internal</group>
    </sharedTo>
</ListView>