force-app/main/default/objects/NI_Project_Backlog__c/listViews/Business_Systems_Completed_Projects.listView-meta.xml
<ListView>
    <fullName>Business_Systems_Completed_Projects</fullName>
    <columns>NAME</columns>
    <columns>Sponsor__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Requested_Completion_Date__c</columns>
    <columns>Priority__c</columns>
    <columns>Complexity__c</columns>
    <columns>Request_Status__c</columns>
    <columns>Project_Completion_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>NI_Project_Backlog__c.Business_Systems</value>
    </filters>
    <filters>
        <field>Request_Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>Business Systems - Completed</label>
    <sharedTo>
        <group>Business_Systems_Internal</group>
    </sharedTo>
</ListView>