force-app/main/default/objects/NI_Project_Backlog__c/listViews/Business_Systems_Current_Sprint.listView-meta.xml
<ListView>
    <fullName>Business_Systems_Current_Sprint</fullName>
    <columns>NAME</columns>
    <columns>Weekly_Update__c</columns>
    <columns>Corporate_Initiative_Lookup__c</columns>
    <columns>Master_Project__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Request_Status__c</columns>
    <columns>Phase__c</columns>
    <columns>Committed__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>NI_Project_Backlog__c.Business_Systems</value>
    </filters>
    <filters>
        <field>Sprint__c</field>
        <operation>equals</operation>
        <value>Current</value>
    </filters>
    <label>Business Systems - Current Sprint</label>
    <sharedTo>
        <group>Business_Systems_Internal</group>
        <group>Commercial_Operations</group>
    </sharedTo>
</ListView>