force-app/main/default/objects/NI_Project_Backlog__c/listViews/Business_Systems_Cybage_DSR.listView-meta.xml
<ListView>
    <fullName>Business_Systems_Cybage_DSR</fullName>
    <columns>NAME</columns>
    <columns>Request_Status__c</columns>
    <columns>Phase__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Include_in_Cybage_DSR__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Business Systems - Cybage DSR</label>
    <sharedTo>
        <group>Business_Systems_Internal</group>
        <group>Offshore_Development_IT</group>
    </sharedTo>
</ListView>