force-app/main/default/objects/NI_Project_Backlog__c/listViews/Business_Systems_EBS.listView-meta.xml
<ListView>
    <fullName>Business_Systems_EBS</fullName>
    <columns>NAME</columns>
    <columns>Master_Project__c</columns>
    <columns>Corporate_Initiative__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Request_Status__c</columns>
    <columns>Phase__c</columns>
    <columns>TShirt_Meter__c</columns>
    <columns>Requested_Completion_Date__c</columns>
    <columns>Systems__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>NI_Project_Backlog__c.Business_Systems</value>
    </filters>
    <filters>
        <field>Systems__c</field>
        <operation>includes</operation>
        <value>EBS</value>
    </filters>
    <label>Business Systems - EBS</label>
</ListView>