force-app/main/default/objects/NI_Project_Backlog__c/listViews/Business_Systems_Next_Sprit.listView-meta.xml
<ListView>
    <fullName>Business_Systems_Next_Sprit</fullName>
    <columns>NAME</columns>
    <columns>Master_Project__c</columns>
    <columns>Corporate_Initiative__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Request_Status__c</columns>
    <columns>Phase__c</columns>
    <columns>Complexity__c</columns>
    <columns>Requested_Completion_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>NI_Project_Backlog__c.Business_Systems</value>
    </filters>
    <filters>
        <field>Sprint__c</field>
        <operation>equals</operation>
        <value>Next</value>
    </filters>
    <label>Business Systems - Next Sprint</label>
    <language>en_US</language>
    <sharedTo>
        <group>Business_Systems_Internal</group>
        <group>Commercial_Operations</group>
    </sharedTo>
</ListView>